--- a/5.4-Differentiation/lesson.yaml
+++ b/5.4-Differentiation/lesson.yaml
@@ -69,10 +69,12 @@
   AnswerTests: omnitest(correctVal='the probability, when the null hypothesis is true, of obtaining a sample as extreme as (or more extreme than) the observed sample')
   Hint: Remember, the randomization distribution is used to determine the range of statistics we might see *if the Null Hypothesis is true*! 
 
+  
 - Class: mult_question
-  Output: Good work! You've completed Pre-Lab 5.4. Please select "YES" (or "No"). Either will allow you to submit the log of this lesson to Google Forms so that I can give you credit for the pre-lab assignment.
-  AnswerChoices: Yes;No
+  Output: Good work! You've completed Pre-Lab 5.4. Please select "Finished!". This will allow you to submit the log of this lesson to Google Forms so that I can give you credit for the pre-lab assignment. Make sure to fill in your email or X500 on the Google form and click submit!
+  AnswerChoices: Finished !
   CorrectAnswer: NULL
   AnswerTests: submit_log()
-  Hint: hint 
+  Hint: hint   
+   
 
