--- a/7.2-SImulation.vs.formulas/lesson.yaml
+++ b/7.2-SImulation.vs.formulas/lesson.yaml
@@ -100,10 +100,11 @@
 - Class: text
   Output: As long as our sample size is big enough, OR our data is approximately normal, these intervals should be pretty similar. The formula version has the benefit of not needing any computation, but the bootstrap version is more flexible.
 
+  
 - Class: mult_question
-  Output: Good work! You've completed Pre-Lab 7.2. Please select "YES" (or "No"). Either will allow you to submit the log of this lesson to Google Forms so that I can give you credit for the pre-lab assignment.
-  AnswerChoices: Yes;No
+  Output: Good work! You've completed Pre-Lab 7.2. Please select "Finished!". This will allow you to submit the log of this lesson to Google Forms so that I can give you credit for the pre-lab assignment. Make sure to fill in your email or X500 on the Google form and click submit!
+  AnswerChoices: Finished !
   CorrectAnswer: NULL
   AnswerTests: submit_log()
-  Hint: hint 
-
+  Hint: hint   
+   
