--- a/1.2-R.as.a.calculator/lesson.yaml
+++ b/1.2-R.as.a.calculator/lesson.yaml
@@ -45,11 +45,13 @@
   AnswerTests: omnitest(correctExpr='test/100', strict=FALSE)
   Hint: Just as if it were a number, type in test/100. What you're *really* doing is dividing 180 by 100, because the value of 'test' is 180.
 
+  
 - Class: mult_question
-  Output: Good work! You've completed Pre-Lab 1.2. Please select "YES" (or "No"). Either will allow you to submit the log of this lesson to Google Forms so that I can give you credit for the pre-lab assignment.
-  AnswerChoices: Yes;No
+  Output: Good work! You've completed Pre-Lab 1.2. Please select "Finished!". This will allow you to submit the log of this lesson to Google Forms so that I can give you credit for the pre-lab assignment. Make sure to fill in your email or X500 on the Google form and click submit!
+  AnswerChoices: Finished !
   CorrectAnswer: NULL
   AnswerTests: submit_log()
   Hint: hint   
-  
+   
+
   
