--- a/2.1-Types.of.variables/lesson.yaml
+++ b/2.1-Types.of.variables/lesson.yaml
@@ -52,11 +52,12 @@
   AnswerTests: omnitest(correctVal='quantitative')
   Hint: GPA is recorded as a quantity, so we treat it as a quantitative variable. Even though it's between 0 and 4, it still represents a lot of possible values because it goes down to the hundreths place (eg, 3.70, 2.09, 3.23).  
 
+  
 - Class: mult_question
-  Output: Good work! You've completed Pre-Lab 4.1. Please select "YES" (or "No"). Either will allow you to submit the log of this lesson to Google Forms so that I can give you credit for the pre-lab assignment.
-  AnswerChoices: Yes;No
+  Output: Good work! You've completed Pre-Lab 2.1. Please select "Finished!". This will allow you to submit the log of this lesson to Google Forms so that I can give you credit for the pre-lab assignment. Make sure to fill in your email or X500 on the Google form and click submit!
+  AnswerChoices: Finished !
   CorrectAnswer: NULL
   AnswerTests: submit_log()
   Hint: hint   
-  
-  
+   
+
