--- a/2.3-Quantitative.variable.plots/lesson.yaml
+++ b/2.3-Quantitative.variable.plots/lesson.yaml
@@ -55,9 +55,11 @@
   AnswerTests: omnitest(correctVal=2)
   Hint: Look at the legend! Since R has automatically assigned colors, the pink line denotes males and the blue line denotes females. R clearly doesn't subscribe to gender norms!
 
+  
 - Class: mult_question
-  Output: Good work! You've completed Pre-Lab 2.3. Please select "YES" (or "No"). Either will allow you to submit the log of this lesson to Google Forms so that I can give you credit for the pre-lab assignment.
-  AnswerChoices: Yes;No
+  Output: Good work! You've completed Pre-Lab 2.3. Please select "Finished!". This will allow you to submit the log of this lesson to Google Forms so that I can give you credit for the pre-lab assignment. Make sure to fill in your email or X500 on the Google form and click submit!
+  AnswerChoices: Finished !
   CorrectAnswer: NULL
   AnswerTests: submit_log()
-  Hint: hint 
+  Hint: hint   
+   
