--- a/2.4-Side.by.side.plots/lesson.yaml
+++ b/2.4-Side.by.side.plots/lesson.yaml
@@ -39,10 +39,11 @@
   AnswerTests: omnitest(correctExpr='densityplot(~Piercings|Gender, data=StudentSurvey, auto.key = TRUE)')
   Hint: Just like in the previous example, we need to do two things. 1- We need to get rid of the groups=Gender argument (just delete it, and the comma after it). 2- We need to add |Gender directly after Piercings. Try it again, and try looking at the code from the previous question for an example!
 
+  
 - Class: mult_question
-  Output: Good work! You've completed Pre-Lab 2.4. Please select "YES" (or "No"). Either will allow you to submit the log of this lesson to Google Forms so that I can give you credit for the pre-lab assignment.
-  AnswerChoices: Yes;No
+  Output: Good work! You've completed Pre-Lab 2.4. Please select "Finished!". This will allow you to submit the log of this lesson to Google Forms so that I can give you credit for the pre-lab assignment. Make sure to fill in your email or X500 on the Google form and click submit!
+  AnswerChoices: Finished !
   CorrectAnswer: NULL
   AnswerTests: submit_log()
-  Hint: hint 
-  
+  Hint: hint   
+   
