--- a/3.1-Boxplots/lesson.yaml
+++ b/3.1-Boxplots/lesson.yaml
@@ -51,9 +51,11 @@
   AnswerTests: omnitest(correctExpr='bwplot(Sodium~Company, data=Cereal)')
   Hint: Not much needs to change from the last bit of code we ran. Since we're now looking at Sodium instead of Calories, we just need to swap those two.
 
+  
 - Class: mult_question
-  Output: Good work! You've completed Pre-Lab 3.1. Please select "YES" (or "No"). Either will allow you to submit the log of this lesson to Google Forms so that I can give you credit for the pre-lab assignment.
-  AnswerChoices: Yes;No
+  Output: Good work! You've completed Pre-Lab 3.1. Please select "Finished!". This will allow you to submit the log of this lesson to Google Forms so that I can give you credit for the pre-lab assignment. Make sure to fill in your email or X500 on the Google form and click submit!
+  AnswerChoices: Finished !
   CorrectAnswer: NULL
   AnswerTests: submit_log()
-  Hint: hint 
+  Hint: hint   
+   
