--- a/3.2-Scatterplots.and.favstats/lesson.yaml
+++ b/3.2-Scatterplots.and.favstats/lesson.yaml
@@ -60,9 +60,11 @@
 - Class: text
   Output: Right. We'll learn later on how to determine if the correlation between variables is statistical significant.  For now, however, we can at least say that there is a positive association between these two variables.
 
+  
 - Class: mult_question
-  Output: Good work! You've completed Pre-Lab 3.2! Please select "YES" (or "No"). Either will allow you to submit the log of this lesson to Google Forms so that I can give you credit for the pre-lab assignment.
-  AnswerChoices: Yes;No
+  Output: Good work! You've completed Pre-Lab 3.2. Please select "Finished!". This will allow you to submit the log of this lesson to Google Forms so that I can give you credit for the pre-lab assignment. Make sure to fill in your email or X500 on the Google form and click submit!
+  AnswerChoices: Finished !
   CorrectAnswer: NULL
   AnswerTests: submit_log()
-  Hint: hint 
+  Hint: hint   
+   
