--- a/3.3-Sample.and.resample/lesson.yaml
+++ b/3.3-Sample.and.resample/lesson.yaml
@@ -53,10 +53,12 @@
 - Class: text
   Output: Whereas sample() produced a permuted version of the same data frame, resample() actually includes several cases multiple times while leaving other cases out! You'll learn why this matters this week in lecture.  
 
+  
 - Class: mult_question
-  Output: Good work! You've completed Pre-Lab 3.3. Please select "YES" (or "No"). Either will allow you to submit the log of this lesson to Google Forms so that I can give you credit for the pre-lab assignment.
-  AnswerChoices: Yes;No
+  Output: Good work! You've completed Pre-Lab 3.3. Please select "Finished!". This will allow you to submit the log of this lesson to Google Forms so that I can give you credit for the pre-lab assignment. Make sure to fill in your email or X500 on the Google form and click submit!
+  AnswerChoices: Finished !
   CorrectAnswer: NULL
   AnswerTests: submit_log()
-  Hint: hint 
+  Hint: hint   
+   
 
