--- a/4.2-Std.err.and.confints/lesson.yaml
+++ b/4.2-Std.err.and.confints/lesson.yaml
@@ -46,10 +46,12 @@
 - Class: text
   Output: Now we have the upper and lower bound of the 95% confidence interval of interest. In the next section, we will explore how our desired level of confidence might change the size of our interval. 
 
+  
 - Class: mult_question
-  Output: Good work! You've completed Pre-Lab 4.2. Please select "YES" (or "No"). Either will allow you to submit the log of this lesson to Google Forms so that I can give you credit for the pre-lab assignment.
-  AnswerChoices: Yes;No
+  Output: Good work! You've completed Pre-Lab 4.2. Please select "Finished!". This will allow you to submit the log of this lesson to Google Forms so that I can give you credit for the pre-lab assignment. Make sure to fill in your email or X500 on the Google form and click submit!
+  AnswerChoices: Finished !
   CorrectAnswer: NULL
   AnswerTests: submit_log()
-  Hint: hint 
+  Hint: hint   
+   
 
