--- a/4.3-Bootstrap.interpretation/lesson.yaml
+++ b/4.3-Bootstrap.interpretation/lesson.yaml
@@ -65,10 +65,12 @@
 - Class: text
   Output: Right - if we don't need to be too confident that our parameter is inside the interval, we will get a much narrower interval. In many contexts (for better or worse), using a 95% confidence is standard. 
 
+  
 - Class: mult_question
-  Output: Good work! You've completed Pre-Lab 4.3. Please select "YES" (or "No"). Either will allow you to submit the log of this lesson to Google Forms so that I can give you credit for the pre-lab assignment.
-  AnswerChoices: Yes;No
+  Output: Good work! You've completed Pre-Lab 4.3. Please select "Finished!". This will allow you to submit the log of this lesson to Google Forms so that I can give you credit for the pre-lab assignment. Make sure to fill in your email or X500 on the Google form and click submit!
+  AnswerChoices: Finished !
   CorrectAnswer: NULL
   AnswerTests: submit_log()
-  Hint: hint 
+  Hint: hint   
+   
 
