--- a/4.4-Bootstrap.practice/lesson.yaml
+++ b/4.4-Bootstrap.practice/lesson.yaml
@@ -41,10 +41,11 @@
 - Class: text
   Output: Exactly. Bootstrapping is a very important tool for creating confidence intervals for all sorts of statistics!
   
+  
 - Class: mult_question
-  Output: Good work! You've completed Pre-Lab 4.4. Please select "YES" (or "No"). Either will allow you to submit the log of this lesson to Google Forms so that I can give you credit for the pre-lab assignment.
-  AnswerChoices: Yes;No
+  Output: Good work! You've completed Pre-Lab 4.4. Please select "Finished!". This will allow you to submit the log of this lesson to Google Forms so that I can give you credit for the pre-lab assignment. Make sure to fill in your email or X500 on the Google form and click submit!
+  AnswerChoices: Finished !
   CorrectAnswer: NULL
   AnswerTests: submit_log()
-  Hint: hint 
-
+  Hint: hint   
+   
