--- a/7.1-Normal.and.t.distribution/lesson.yaml
+++ b/7.1-Normal.and.t.distribution/lesson.yaml
@@ -74,10 +74,12 @@
 - Class: text
   Output: Instead of an interval of 50 to 90, we now have an interval of 38 to 102 - MUCH wider! Therefore, it's important to know your sample size when calculating a confidence interval for a population mean. 
 
+  
 - Class: mult_question
-  Output: Good work! You've completed Pre-Lab 7.1. Please select "YES" (or "No"). Either will allow you to submit the log of this lesson to Google Forms so that I can give you credit for the pre-lab assignment.
-  AnswerChoices: Yes;No
+  Output: Good work! You've completed Pre-Lab 7.1. Please select "Finished!". This will allow you to submit the log of this lesson to Google Forms so that I can give you credit for the pre-lab assignment. Make sure to fill in your email or X500 on the Google form and click submit!
+  AnswerChoices: Finished !
   CorrectAnswer: NULL
   AnswerTests: submit_log()
-  Hint: hint 
+  Hint: hint   
+   
 
