--- a/8.1-Chi.sq.tests/lesson.yaml
+++ b/8.1-Chi.sq.tests/lesson.yaml
@@ -72,10 +72,12 @@
 - Class: text
   Output: Exactly - we can reject the null hypothesis that the treatment group has no association with relapse rate!
 
+  
 - Class: mult_question
-  Output: Good work! You've completed Pre-Lab 8.1. Please select "YES" (or "No"). Either will allow you to submit the log of this lesson to Google Forms so that I can give you credit for the pre-lab assignment.
-  AnswerChoices: Yes;No
+  Output: Good work! You've completed Pre-Lab 8.1. Please select "Finished!". This will allow you to submit the log of this lesson to Google Forms so that I can give you credit for the pre-lab assignment. Make sure to fill in your email or X500 on the Google form and click submit!
+  AnswerChoices: Finished !
   CorrectAnswer: NULL
   AnswerTests: submit_log()
-  Hint: hint 
+  Hint: hint   
+   
 
