--- a/8.2-ANOVA/lesson.yaml
+++ b/8.2-ANOVA/lesson.yaml
@@ -59,10 +59,12 @@
 - Class: text
   Output: You'll look at more useful ways to analyze many groups when you learn about linear models, but ANOVAs are useful for exploratory data analysis and more.
 
+  
 - Class: mult_question
-  Output: Good work! You've completed Pre-Lab 8.2. Please select "YES" (or "No"). Either will allow you to submit the log of this lesson to Google Forms so that I can give you credit for the pre-lab assignment.
-  AnswerChoices: Yes;No
+  Output: Good work! You've completed Pre-Lab 8.2. Please select "Finished!". This will allow you to submit the log of this lesson to Google Forms so that I can give you credit for the pre-lab assignment. Make sure to fill in your email or X500 on the Google form and click submit!
+  AnswerChoices: Finished !
   CorrectAnswer: NULL
   AnswerTests: submit_log()
-  Hint: hint  
+  Hint: hint   
+   
 
