--- a/9.1-Best.fit.line/lesson.yaml
+++ b/9.1-Best.fit.line/lesson.yaml
@@ -107,10 +107,12 @@
 - Class: text
   Output: Those are the basic mechanics of a best fit line and linear regression. In the next section, we'll explore plots used to determine if the assumptions of the model are reasonable.
 
+  
 - Class: mult_question
-  Output: Good work! You've completed Pre-Lab 9.1. Please select "YES" (or "No"). Either will allow you to submit the log of this lesson to Google Forms so that I can give you credit for the pre-lab assignment.
-  AnswerChoices: Yes;No
+  Output: Good work! You've completed Pre-Lab 9.1. Please select "Finished!". This will allow you to submit the log of this lesson to Google Forms so that I can give you credit for the pre-lab assignment. Make sure to fill in your email or X500 on the Google form and click submit!
+  AnswerChoices: Finished !
   CorrectAnswer: NULL
   AnswerTests: submit_log()
-  Hint: hint 
+  Hint: hint   
+   
 
