--- a/9.2-Assumptions/lesson.yaml
+++ b/9.2-Assumptions/lesson.yaml
@@ -96,11 +96,13 @@
 - Class: text
   Output: Yes, the dots fall on the line. The assumptions look like they are reasonably met!
   
-
+  
 - Class: mult_question
-  Output: Good work! You've completed Pre-Lab 9.2. Please select "YES" (or "No"). Either will allow you to submit the log of this lesson to Google Forms so that I can give you credit for the pre-lab assignment.
-  AnswerChoices: Yes;No
+  Output: Good work! You've completed Pre-Lab 9.2. Please select "Finished!". This will allow you to submit the log of this lesson to Google Forms so that I can give you credit for the pre-lab assignment. Make sure to fill in your email or X500 on the Google form and click submit!
+  AnswerChoices: Finished !
   CorrectAnswer: NULL
   AnswerTests: submit_log()
-  Hint: hint 
+  Hint: hint   
+   
+
 
