--- a/9.3-Predict.function/lesson.yaml
+++ b/9.3-Predict.function/lesson.yaml
@@ -59,10 +59,12 @@
 - Class: text
   Output: Yes.  Confidence intervals/bands only account for our uncertainty regarding the best fit line. By contrast, prediction intervals/bands capture uncertainty associated with the best-fit line, but also the variation about the line. Notice how prediction bands cover encompass nearly all of the data!
 
+  
 - Class: mult_question
-  Output: Good work! You've completed Pre-Lab 9.3. Please select "YES" (or "No"). Either will allow you to submit the log of this lesson to Google Forms so that I can give you credit for the pre-lab assignment.
-  AnswerChoices: Yes;No
+  Output: Good work! You've completed Pre-Lab 9.3. Please select "Finished!". This will allow you to submit the log of this lesson to Google Forms so that I can give you credit for the pre-lab assignment. Make sure to fill in your email or X500 on the Google form and click submit!
+  AnswerChoices: Finished !
   CorrectAnswer: NULL
   AnswerTests: submit_log()
-  Hint: hint 
+  Hint: hint   
+   
 
